# aicomm

./: .env  .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  ai.rest  cliff.toml  fmt.sh  test.rest
.github/workflows/: build.yml
chat/: .gitignore  Cargo.toml  README.md  deny.toml  test.rest
chat/.github/workflows/: build.yml
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: openai.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: mod.rs  ollama.rs  openai.rs
chat/analytic_server/: Cargo.toml  analytics.yml
chat/analytic_server/src/: config.rs  events.rs  extractors.rs  handler.rs  lib.rs  main.rs  openapi.rs
chat/analytics_server/: Cargo.toml  analytics.yml
chat/analytics_server/src/: events.rs  extractors.rs  handlers.rs  lib.rs
chat/bot_server/: Cargo.toml  bot.yml
chat/bot_server/src/: config.rs  notif.rs
chat/chat_core/: Cargo.toml
chat/chat_core/fixtures/: decoding.pem
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml  chat.yml
chat/chat_server/fixtures/: encoding.pem  test.sql
chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat/chat_server/src/middlewares/: chat.rs
chat/chat_server/src/models/: agent.rs  chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat/chat_test/: Cargo.toml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20250715023731_initial.sql  20250729222816_triggers.sql  20250804052612_agent.sql  20250806003205_agent_adapter.sql  20250808030140_user_bot.sql
chat/notify_server/: Cargo.toml  index.html  notify.yml
chat/notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
chatapp/: package.json
chatapp/src/: main.js
chatapp/src/store/: index.js
protos/: clickhouse.sql
swiftide-pgvector/: Cargo.toml  LICENSE.md  deny.toml
swiftide-pgvector/examples/: indexer.rs
swiftide-pgvector/src/: lib.rs  retrieve.rs
