[package]
name = "ai_sdk"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
[dependencies]
anyhow.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true}

[dev-dependencies]
tokio = { workspace = true }
