[package]
name = "analytic-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
axum.workspace = true
chat-core.workspace = true
chrono = { workspace = true, features = ["serde"] }
clickhouse = { version = "0.13.3", features = ["rustls-tls", "time"] }
futures-util = { version = "0.3.31", default-features = false }
prost = "0.14.1"
prost-types = "0.14.1"
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[build-dependencies]
anyhow.workspace = true
prost-build = "0.14.1"
proto-builder-trait = { version = "0.6.2", features = ["prost"], default-features = false }

[dev-dependencies]
clickhouse = { version = "0.13.3", features = ["rustls-tls", "time", "test-util"] }
