[package]
name = "bot-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[[bin]]
name = "bot"
path = "src/server.rs"

[[bin]]
name = "indexer"
path = "src/indexer.rs"

[dependencies]
anyhow = { workspace = true }
chat-core = { workspace = true }
futures = "0.3.31"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
swiftide = { version = "0.29.0", features = ["fastembed", "ollama", "tree-sitter", "openai"] }
swiftide-pgvector = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
