[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
jwt-simple = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
axum-extra = { workspace = true }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
