[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]
http-body-util = ["dep:http-body-util"]

[dependencies]
anyhow = {workspace = true}
argon2 = { version = "0.5.3", features = ["std"] }
axum = {workspace = true}
axum-extra = {workspace = true}
chrono = { workspace = true }
chat-core = { workspace = true}
error = {workspace = true}
hex = "0.4.3"
http-body-util = { version = "0.1.3", optional = true }
mime_guess = "2.0.5"
serde = {workspace = true}
serde_json = "1.0.140"
serde_yaml = {workspace = true}
sha1 = "0.10.6"
sqlx = { workspace = true}
sqlx-db-tester = { version = "0.6.0", optional = true }
this = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
jwt-simple = { workspace = true }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }

[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
