[package]
name = "chat_test"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
[dev-dependencies]
anyhow.workspace = true
axum.workspace = true
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
futures = "0.3.31"
notify-server = { workspace = true }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
reqwest-eventsource = "0.6.0"
serde.workspace = true
serde_json = "1.0.141"
tokio.workspace = true
tracing.workspace = true
